Fix layout issues with the third content column

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5005,7 +5005,19 @@ body.page-id-13 .hocus\:bg-primary-70:hover, body.page-id-13 .hocus\:bg-primary-
 
 [id*="form-submit"] [type="radio"]:checked + label { background-color: #fff; }
 
-[data-layout]:not(:nth-of-type(1)) > :nth-child(3) { display: none !important; }
+.bootstrap-wrapper [data-layout] > :nth-child(1) {
+  width: -webkit-calc(35% - 1px) !important;
+  width: -moz-calc(35% - 1px) !important;
+  width: calc(35% - 1px) !important;
+}
+
+.bootstrap-wrapper [data-layout] > :nth-child(2) {
+  width: -webkit-calc(65% + 1px) !important;
+  width: -moz-calc(65% + 1px) !important;
+  width: calc(65% + 1px) !important;
+}
+
+.bootstrap-wrapper [data-layout] > :nth-child(3) { display: none !important; }
 
 @media (min-width: 992px) {
   [data-layout] {
